tooling/nargo_cli/tests/snapshots/execution_success/regression_7744/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
use std::embedded_curve_ops::{embedded_curve_add, EmbeddedCurvePoint};

fn main(is_active: bool) -> pub EmbeddedCurvePoint {
    let bad: EmbeddedCurvePoint = EmbeddedCurvePoint::new(0_Field, 5_Field);
    if is_active {
        embedded_curve_add(bad, bad)
    } else {
        bad
    }
}
