tooling/nargo_cli/tests/snapshots/execution_success/regression_7744/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "is_active",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "struct",
        "path": "std::embedded_curve_ops::EmbeddedCurvePoint",
        "fields": [
          {
            "name": "x",
            "type": {
              "kind": "field"
            }
          },
          {
            "name": "y",
            "type": {
              "kind": "field"
            }
          },
          {
            "name": "is_infinite",
            "type": {
              "kind": "boolean"
            }
          }
        ]
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _9",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1, _2, _3]",
    "BLACKBOX::RANGE [_0]:1 bits []",
    "EXPR [ (-1, _0) (-1, _4) 1 ]",
    "EXPR [ (-17631683881184975370165255887551781615748388533673675138855, _0) (-1, _5) 17631683881184975370165255887551781615748388533673675138860 ]",
    "EXPR [ (-1, _6) 0 ]",
    "BLACKBOX::EMBEDDED_CURVE_ADD [_4, _5, _6, _4, _5, _6, 1] [_7, _8, _9]",
    "EXPR [ (-1, _0, _7) (1, _1) 0 ]",
    "EXPR [ (-1, _0, _8) (1, _2) (-5, _4) 0 ]",
    "EXPR [ (-1, _0, _9) (1, _3) 0 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
