tooling/nargo_cli/tests/snapshots/execution_success/regression_7744/execute__tests__force_brillig_true_inliner_-9223372036854775808_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[regression_7744] Circuit output: Struct({"is_infinite": Field(0), "x": Field(0), "y": Field(5)})
----- stderr -----
