tooling/nargo_cli/tests/snapshots/execution_success/regression_7744/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[regression_7744] Circuit output: std::embedded_curve_ops::EmbeddedCurvePoint { x: 0x00, y: 0x05, is_infinite: 0 }
